Payment process & Credit balance added
